# github_discord

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  github_repo.py  main.py  preview_message.py  pyproject.toml  requirements.txt  services.py  settings.py
.github/workflows/: dependency-review.yml
example/: main.py
pull_requests/adapter/: github_repository.py  inmemory_pull_request_repository.py
pull_requests/domain/: pull_request.py  pull_request_repository.py
src/: github_repo.py  main.py  preview_message.py  settings.py  utils.py
src/cogs/: pull_requests.py  settings.py  utils.py
src/domain/: githubb.py
src/github_discord/: github_service.py
src/github_discord/cogs/: discord_embeds.py  pull_requests.py  utils.py
src/github_discord/domain/: githubb.py
