[tool.poetry]
name = "githubdiscordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^1.55"
python-dotenv = "^1.0.0"
py-cord = "^2.4.1"
humanize = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
