[tool.poetry]
name = "github_discord"
version = "0.1.5
description = ""
authors = ["EnriqueSoria <me@enriquesoria.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/EnriqueSoria/GithubDiscordBot"
repository = "https://github.com/EnriqueSoria/GithubDiscordBot"

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^1.55"
python-dotenv = "^1.0.0"
py-cord = "^2.4.1"
humanize = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
